--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
 <html>
 <head>
-<style>
-('https://fonts.googleapis.com/css2?family=El+Messiri&display=swap');
-</style>
 <link rel="preconnect" href="https://fonts.gstatic.com"> 
-<link href="https://fonts.googleapis.com/css2?family=El+Messiri&display=swap" rel="stylesheet">
-<link rel ="stylesheet" href="x.css"/>
- <meta charset="UTF-8">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
+<meta charset="UTF-8">
+<link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="favicon.png">
+<title>Ripple Effect</title>
 </head>
 <body>
-<div class="w3-card-4">
-  <center><img src="https://lomazoma.com/temp/resized/small_2020-08-31-d4865f5dd5.jpg"></center>
+<link rel ="stylesheet" href="g.css"/>
+<link rel="stylesheet" href="xxx.css">
+<center><h1>Login page<h1></center>
 
-<center><h1> علي ابوصباع خبير تقني للتواصل</h1></center>
+<script>
+
+</script>
+
+<script src="iz.js"></script>
+
+
+	<div class="form__div">
+                   <center><input type="text" class="form__input" placeholder=" " id="user"></center>
+                    <label for="" class="form__label"></label>
+                </div>
+<p></p>
+     <center><button class="ripple" onclick="gg()">login</button></center>
 </body>
 </html>
