--- a/pagetwo.html
+++ b/pagetwo.html
@@ -1,6 +1,11 @@
 
 <html>
 <head>
+
+<link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="favicon.png">
+<title>Ripple Effect</title>
+
 <link rel="preconnect" href="https://fonts.gstatic.com"> 
 <link href="https://fonts.googleapis.com/css2?family=Harmattan&display=swap" rel="stylesheet">
 <title> موقع علي ابو صباع تم التطوير بواسطة zero</title>
@@ -21,7 +26,7 @@ font-family: 'Harmattan', sans-serif;
 <center><h1> :علي ابوصباع خبير تقني للتواصل</h1></center>
 <center><input type="textarea" id="mess" placeholder="اكتب رسالة"></input></center>
 
-<br><center><button onclick="Aa()">ارسال</button><center>
+<br><center><button class="ripple" onclick="Aa()">ارسال</button><center>
 
 
 </body>
