--- a/pagetwo.html
+++ b/pagetwo.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Harmattan&display=swap" rel="stylesheet">
 <title> موقع علي ابو صباع تم التطوير بواسطة zero</title>
 <link rel ="stylesheet" href="x.css"/>
+<link rel="stylesheet" href="g.css">
 
  <meta charset="UTF-8">
 
@@ -24,7 +25,7 @@ font-family: 'Harmattan', sans-serif;
 }
 </style>
 <center><h1> :علي ابوصباع خبير تقني للتواصل</h1></center>
-<center><input type="textarea" id="mess" placeholder="اكتب رسالة"></input></center>
+<center><input type="text" id="mess" placeholder="اكتب رسالة"></input></center>
 
 <br><center><button class="ripple" onclick="Aa()">ارسال</button><center>
 
