--- a/pagetwo.html
+++ b/pagetwo.html
@@ -3,8 +3,8 @@
 <head>
 
 <link rel="stylesheet" href="style.css">
-<link rel="icon" type="image/x-icon" href="favicon.png">
-<title>Ripple Effect</title>
+<link rel="icon" type="image/x-icon" href="https://img.icons8.com/ios/452/program.png">
+
 
 <link rel="preconnect" href="https://fonts.gstatic.com"> 
 <link href="https://fonts.googleapis.com/css2?family=Harmattan&display=swap" rel="stylesheet">
