--- a/pagetwo.html
+++ b/pagetwo.html
@@ -3,7 +3,7 @@
 <head>
 
 <link rel="stylesheet" href="style.css">
-<link rel="icon" type="image/x-icon" href="https://img.icons8.com/ios/452/program.png">
+<link rel="icon" href="https://img.icons8.com/ios/452/program.png">
 
 
 <link rel="preconnect" href="https://fonts.gstatic.com"> 
